css file for the overflow fixed scss file

--- a/notes.css
+++ b/notes.css
@@ -63,6 +63,7 @@ body {
   display: grid;
   -ms-grid-rows: 10% 80% 10%;
       grid-template-rows: 10% 80% 10%;
+  overflow: hidden;
   -webkit-box-shadow: inset 50px 50px 100px white, 10px 10px 20px black;
           box-shadow: inset 50px 50px 100px white, 10px 10px 20px black;
 }
@@ -104,6 +105,7 @@ i {
 .text-area {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .main {
@@ -115,6 +117,7 @@ i {
   padding: 1rem;
   display: none;
   border: none;
+  overflow: hidden;
 }
 
 .appear {
